GNOME Bugzilla – Bug 681943
fix a leak and other minor issues
Last modified: 2012-08-16 02:29:48 UTC
Patches here fix a string leak and other minor issues
Created attachment 221308 [details] [review] Fix a string leak
Created attachment 221309 [details] [review] Bail out as soon as you find a module that matches mime type
Created attachment 221310 [details] [review] Print a warning when failing to match mime type
Review of attachment 221308 [details] [review]: Looks correct. The commit message should probably also mention that you avoid a pointless second guess call when filename is NULL.
Review of attachment 221309 [details] [review]: ok
Review of attachment 221310 [details] [review]: That seems redundant - we're already reporting this fact as a GError.
Attachment 221308 [details] pushed as db341ce - Fix a string leak Attachment 221309 [details] pushed as 258ba2d - Bail out as soon as you find a module that matches mime type