Fix a string leak

And avoid a pointless second call when filename is NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=681943